@@ -1,64 +1,46 @@
 package com.github.cyanlist;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.*;
 
-public class Function extends Term{
+public final class Function implements Term {
+    final String functor;
+    private final List<Term> args;
 
-    private final List<Term> arguments;
-
-    public Function(String name, Term argument) {
-        super(name);
-        this.arguments = Collections.singletonList(argument);
+    public Function(String functor, Term... args){
+        this.functor = functor;
+        this.args    = List.of(args); // immutable copy
     }
 
-    public Function(String name, Term firstArgument, Term secondArgument) {
-        super(name);
-        this.arguments = Arrays.asList(firstArgument, secondArgument);
+    /** Liefert den Namen des Funktors (z. B. "f", "+", "succ"). */
+    public String functor() {
+        return functor;
     }
 
-    public Term getFirstArgument() {
-        return this.arguments.get(0);
+    @Override public Term apply(Substitution σ) {
+        return new Function(functor,
+                args.stream().map(t -> t.apply(σ)).toArray(Term[]::new));
     }
 
-    public Optional<Term> getSecondArgument() {
-        return this.getArity() == 2 ?
-                Optional.of(this.arguments.get(1)) :
-                Optional.empty();
+    @Override public Set<Variable> vars() {
+        return args.stream().flatMap(t -> t.vars().stream()).collect(Collectors.toSet());
     }
 
-    public List<Term> getArguments() {
-        return this.arguments;
-    }
-
-    public int getArity() {
-        return this.getArguments().size();
-    }
-
-    public boolean isCompatibleWith(Function other) {
-        return this.getName().equals(other.getName()) &&
-                this.getArity() == other.getArity();
-    }
-
-    @Override
-    public String toString() {
-        return this.getName() + this.getArguments().stream()
+    @Override public String toString() {
+        return functor + args.stream()
                 .map(Object::toString)
                 .collect(Collectors.joining(",", "(", ")"));
     }
 
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Function other)) return false;
-        return this.getName().equals(other.getName()) &&
-                this.getArguments().equals(other.getArguments());
+    @Override public boolean equals(Object o){
+        return o instanceof Function f &&
+                functor.equals(f.functor) &&
+                args.equals(f.args);
     }
+    @Override public int hashCode(){ return Objects.hash(functor, args); }
 
-//    @Override
-//    public int hashCode() {
-//        return Objects.hash(this.getName(), this.getArguments());
-//    }
-
+    /* Convenience */
+    public int arity() { return args.size(); }
+    public Term arg(int i){ return args.get(i); }
 }
 
